--- a/packages.config
+++ b/packages.config
@@ -8,4 +8,7 @@
   <package id="System.Data.SQLite.Core" version="1.0.115.0" targetFramework="net462" />
   <package id="System.Data.SQLite.EF6" version="1.0.115.0" targetFramework="net462" />
   <package id="System.Data.SQLite.Linq" version="1.0.115.0" targetFramework="net462" />
+  <package id="System.Data.HashFunction.CRC" version="2.0.0" targetFramework="net462" />
+  <package id="System.Data.HashFunction.Interfaces" version="2.0.0" targetFramework="net462" />
+  <package id="System.Data.HashFunction.Core" version="2.0.0" targetFramework="net462" />
 </packages>
